src/test/ui/not-panic/not-panic-safe-5.stderr
error[E0277]: the type `UnsafeCell<i32>` may contain interior mutability and a reference may not be safely transferrable across a catch_unwind boundary
  --> $DIR/not-panic-safe-5.rs:9:5
   |
LL |     assert::<*const UnsafeCell<i32>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `UnsafeCell<i32>` may contain interior mutability and a reference may not be safely transferrable across a catch_unwind boundary
   |
   = help: the trait `RefUnwindSafe` is not implemented for `UnsafeCell<i32>`
   = note: required because of the requirements on the impl of `UnwindSafe` for `*const UnsafeCell<i32>`
note: required by a bound in `assert`
  --> $DIR/not-panic-safe-5.rs:6:14
   |
LL | fn assert<T: UnwindSafe + ?Sized>() {}
   |              ^^^^^^^^^^ required by this bound in `assert`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
